--- a/LearnfiyTasarim/package.json
+++ b/LearnfiyTasarim/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.4.3",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/base": "^4.0.0-rc.7",
@@ -22,15 +25,17 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.5.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "^13.13.0",
-    "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
+    "react-native-windows": "0.72.9",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
